<resources>
    <string name="app_name">Z.E. Services</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_no_config">Unable to load app configuration</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_load_accounts">Unable to load accounts for login</string>
    <string name="error_no_accounts">No accounts for the login</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="last_updated">Last updated</string>
    <string name="not_charging">Not charging</string>
    <string name="charging">Charging</string>
    <string name="plugged_in">Plugged in</string>
    <string name="not_plugged_in">Not plugged in</string>
    <string name="charging_percentage">%d%%</string>
    <string name="km">km</string>
    <string name="miles">miles</string>
    <string name="startCharge">Start Charging</string>
    <string name="charge_data">Charge data</string>
    <string name="air_conditioning">Air conditioning</string>
    <string name="car_status">Car status</string>
    <string name="navigation_drawer_open">Choose VIN</string>
    <string name="navigation_drawer_close">Finished</string>
    <string name="precondition">Start Precondition</string>
    <string name="started_condition">Pre-conditioning started</string>
    <string name="error_conditioning">Error starting conditioning</string>
    <string name="last_scheduled">Last scheduled: %s</string>
    <string name="logout">Logout</string>
    <string name="started_charge">Start</string>
    <string name="ended_charge">End</string>
    <string name="accelerated">Accelerated</string>
    <string name="invalid">Invalid</string>
    <string name="slow">Slow</string>
    <string name="unknown">Unknown</string>
    <string name="login_description">This app is an unofficial wrapper around the ZE Services API.  Log in using your ZE Services email and password as you created on Renault\'s website.</string>
    <string name="register">Register</string>
    <string name="save_credentials">Save login details</string>
    <string name="save_credentials_insecure">Save login details (not encrypted)</string>
</resources>
